stopped weird whitespace when opening modals added icons to navigation drawers

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 
 
 html, .root {
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 
